[package]
name = "bombuscv-rs"
version = "0.1.0"
authors = ["Marco Radocchia <marco.radocchia@outlook.com"]
edition = "2021"
rust-version = "1.61.0"
description = "OpenCV based motion detection/recording software built for research on bumblebees."
readme = "README.md"
repository = "https://github.com/marcoradocchia/bombuscv-rs/"
license = "GPL-3.0-only"
keywords = ["opencv", "bumblebee", "insect", "motion", "video-recording"]
categories = ["command-line-utilities", "computer-vision", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bombuscv"
path = "src/main.rs"

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
directories = { version = "4.0.1" }
serde = { version = "1.0.137", features = ["derive"] }
toml = { version = "0.5.9" }
chrono = { version = "0.4.19" }
validator = { version = "0.15.0", features = ["derive"] }
opencv = { version = "0.65.0" }
signal-hook = { version = "0.3.14" }
ffprobe = { version = "0.3.2" }
