[package]
name = "bombuscv-rs"
version = "0.4.0"
authors = ["Marco Radocchia <marco.radocchia@outlook.com"]
edition = "2021"
rust-version = "1.61.0"
description = "OpenCV based motion detection/recording software built for research on bumblebees."
readme = "README.md"
repository = "https://github.com/marcoradocchia/bombuscv-rs/"
license = "GPL-3.0-only"
keywords = ["opencv", "bumblebee", "insect", "motion", "video-recording"]
categories = ["command-line-utilities", "computer-vision", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bombuscv"
path = "src/main.rs"

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
directories = { version = "4.0.1" }
serde = { version = "1.0.140", features = ["derive"] }
toml = { version = "0.5.9" }
chrono = { version = "0.4.19" }
opencv = { version = "0.66.0" }
signal-hook = { version = "0.3.14" }
termcolor = { version = "1.1.3" }
atty = { version = "0.2.14" }

[profile.release]
lto = true   # link-time-optimization
strip = true # strip symbols from binary
